Refactoring and styling

--- a/root/index.html
+++ b/root/index.html
@@ -164,7 +164,7 @@
                 <img src="img/impact.jpg" />
                 <h4>Impact "Impact" (TOP)</h4>
                 <p>
-                    After winning the world championship with Korean giants SK Telecom in 2014, Impact moved to North American Team Impulse. Despite TIP's moderate success, Impact decided to stay in NA after the 2015 season and now plays with new team NRG eSports. Despite consistent strong performances on carry top laners (most notably Fiora), Impact has been criticized for his failure to smoothly transition into the tank meta that we have seen since the start of the 2016 season.
+                    After winning the world championship with SKT in 2014, Impact moved to Team Impulse in NA. Despite TIP's moderate success, Impact decided to stay in NA after the 2015 season and now plays with new team NRG eSports. Impact has recently been criticized for his failure to smoothly transition into the tank meta that we have seen since the start of the 2016 season.
                 </p>
             </div>
         </a>
