cancel links in profiles since they don't really work

--- a/root/index.html
+++ b/root/index.html
@@ -89,7 +89,7 @@
 
 <div id="wrapper">
     <div id="columns">
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/double.jpg" />
                 <h4>Doublelift "Doublelift" (ADC)</h4>
@@ -99,7 +99,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/sneaky.jpg" />
                 <h4>Sneaky "C9 Sneaky" (ADC)</h4>
@@ -109,7 +109,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/bjergsen.jpg" />
                 <h4>Bjersen "mid is sucess" (MID)</h4>
@@ -119,7 +119,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/huni.jpeg" />
                 <h4>Huni "ADC Huni" (TOP)</h4>
@@ -129,7 +129,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/darshan.jpg" />
                 <h4>Darshan "ZionSpartan" (TOP)</h4>
@@ -139,7 +139,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/rush.jpg" />
                 <h4>Rush "Rush" (JUNGLE)</h4>
@@ -149,7 +149,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/wildTurtle.jpg" />
                 <h4>WildTurtle "WildTurtle" (ADC)</h4>
@@ -159,7 +159,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/impact.jpg" />
                 <h4>Impact "Impact" (TOP)</h4>
@@ -169,7 +169,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/piglet.jpg" />
                 <h4>Piglet "GodPiglet" (ADC)</h4>
@@ -179,7 +179,7 @@
             </div>
         </a>
 
-        <a href="#profile-break" class="smoothScroll">
+        <a class="smoothScroll">
             <div class="pin">
                 <img src="img/kiwikid.jpg" />
                 <h4>KiWiKiD "KiWiKiD" (SUPPORT)</h4>
