--- a/root/index.html
+++ b/root/index.html
@@ -114,7 +114,7 @@
                 <img src="img/bjergsen.jpg" />
                 <h4>Bjersen "mid is sucess" (MID)</h4>
                 <p>
-                    Bjergsen, the Danish import who moved from the Copenhagen Wolves to Team Solo Mid in 2014, has been widely heralded as one of the best midlaners in the world. His aggressive playstyle and tendency to dominate midlane across a variety of lane matchups has earned him a reputation for strong showings on assassins such as Zed and Leblanc.
+                    The Danish import, Bjergsen, moved from the Copenhagen Wolves to Team Solo Mid in 2014. Widely heralded as one of the best midlaners in the world, he boasts an aggressive playstyle and tends to dominate midlane. His signature champions are Zed and Leblanc.
                 </p>
             </div>
         </a>
@@ -124,7 +124,7 @@
                 <img src="img/huni.jpeg" />
                 <h4>Huni "ADC Huni" (TOP)</h4>
                 <p>
-                    After starting his career at Samsung in the Korean LCK, Huni moved to Europe where he enjoyed a wildly successful 2015 Season with Fnatic. After a strong run at worlds, Fnatic disbanded and Huni found himself once again relocated, this time to a fledgling Immortals team in North America.
+                    After starting his career at Samsung in the Korean LCK, Huni moved to Europe where he enjoyed a wildly successful 2015 Season with Fnatic. After a strong run at worlds, Fnatic disbanded and Huni found himself once again relocated, this time to the fan favorite Immortals team in North America.
                 </p>
             </div>
         </a>
@@ -134,7 +134,7 @@
                 <img src="img/darshan.jpg" />
                 <h4>Darshan "ZionSpartan" (TOP)</h4>
                 <p>
-                    Darshan (sometimes better known by his old alias, ZionSpartan) currently plays for CLG. He was one of the first players to popularize the top lane carry meta which has since been replaced largely by tanks. Every once in a while he will still be seen playing his signature champions such as Jax and Nasus.
+                    Darshan (better known by his old alias, ZionSpartan) currently plays for CLG. He was one of the first players to popularize the top lane carry meta which has since been replaced largely by tanks. Every once in a while he will still be seen playing his signature champions such as Jax and Nasus.
                 </p>
             </div>
         </a>
@@ -144,7 +144,7 @@
                 <img src="img/rush.jpg" />
                 <h4>Rush "Rush" (JUNGLE)</h4>
                 <p>
-                    Rush moved from Korea to join Cloud 9 and was met with awe as he climbed to the very top of the NA solo queue ladder within the first week, abusing is absurdly aggressive early game on champions such as Lee Sin and Nidalee. He has been a successful replacement for Cloud 9's popular jungler Meteos, who retired last year.
+                    Rush moved from Korea to join Cloud 9 and was met with awe as he climbed to the very top of the NA solo queue ladder within the first week. He has been a successful replacement for Cloud 9's popular jungler Meteos, who retired last year.
                 </p>
             </div>
         </a>
@@ -154,7 +154,7 @@
                 <img src="img/wildTurtle.jpg" />
                 <h4>WildTurtle "WildTurtle" (ADC)</h4>
                 <p>
-                    WildTurtle received harsh criticism towards the end of the 2015 split. Many believed that he had underperformed compared to the rest of Team Solo Mid. His move to Immortals in 2016 turned out to be exactly the right move to silence those critics. Since the move he has been an integral part of the Immortal's 17-1 2016 spring split.
+                    WildTurtle received harsh criticism towards the end of the 2015 split because he was underperforming compared to the rest of Team Solo Mid. His move to Immortals in 2016 silenced those critics. Since the move he has been an integral part of the Immortal's 17-1 2016 spring split.
                 </p>
             </div>
         </a>
@@ -164,7 +164,7 @@
                 <img src="img/impact.jpg" />
                 <h4>Impact "Impact" (TOP)</h4>
                 <p>
-                    After winning the world championship with SKT in 2014, Impact moved to Team Impulse in NA. Despite TIP's moderate success, Impact decided to stay in NA after the 2015 season and now plays with new team NRG eSports. Impact has recently been criticized for his failure to smoothly transition into the tank meta that we have seen since the start of the 2016 season.
+                    After winning the world championship with SKT in 2014, Impact moved to Team Impulse in NA. Now with his new team NRG eSports, Impact has recently been criticized for his failure to smoothly transition into the tank meta since the start of the 2016 season.
                 </p>
             </div>
         </a>
@@ -184,7 +184,7 @@
                 <img src="img/kiwikid.jpg" />
                 <h4>KiWiKiD "KiWiKiD" (SUPPORT)</h4>
                 <p>
-                    Kiwikid is the only remaining member of the original Dignitas roster. While he isn't known for flashy plays and huge highlight reels, Kiwikid is an outstandingly consistent player who makes few mistakes and works behind the scenes to help carry Dignitas to victory.
+                    Kiwikid is the only remaining member of the original Dignitas roster. While he isn't known for flashy plays and huge highlight reels, Kiwikid is an outstandingly consistent player who makes few mistakes and works behind the scenes to help carry Dignitas to victory. After being relegated, he was quoted saying, "It was the end of a good thing and I can just move on."
                 </p>
             </div>
         </a>
