--- a/root/index.html
+++ b/root/index.html
@@ -52,12 +52,15 @@
 
 <div id="viz-intro">
     <p>
+        The fast-paced, competitive online game League of Legends draws nearly 27 million unique players daily. 2 teams of 5 players control powerful champions to battle head-to-head across a battlefield. Each player is given a unique role across the map - [Top Lane, Jungle, Mid Lane, ADC and Support]
+    </p>
+    <p>
         League of Legends is an incredibly strategic game. One can learn strategy and tactics by observing the patterns and playstyles of professional and semi-professional players. Our visualization allows people to access and interface with pro players data so that regular players can learn more efficiently.
     </p>
     <p>
         Search through our database for your favorite player or pick from our suggested profiles below.
-        For our interactive map, input the player's ingame-tag ("Quoted-Name" in the Player Profiles section), select a role (select their appropriate role for best the representative data) to view the map movements.
-        For our radar chart plot, input up to 3 ingame-tags to compare the players against each other. The red polygon always represents the mean data of all the players in our dataset.
+        For our interactive map, input the player's ingame-tag ("Quoted-Name" in the Player Profiles section), select a role to view the map movements.
+        For our radar chart plot, input up to 3 ingame-tags to compare the players against each other. The orange polygon always represents the mean data of all the players in our dataset.
     </p>
 </div>
 
@@ -206,7 +209,7 @@
     <br/>
     <p>Narrowing the time range to 1-10 minutes can be quite revealing. What we see is that Dyrus' position bounces between the top lane and the middle and bottom lanes. Because of the structure of the data, we needed to interpolate map movements, but what those forays from the top lane actually represent are most likely teleports. Dyrus is using Teleport to assist his other lanes. This is very revealing of the current prevailing play style: isolate your top laner but ensure that he or she has teleport ready to assist other lanes in case they come under pressure from ganks or from mid lane roams.</p>
     <br/>
-    <p>Now change the time range to 15-25 minutes to contrast the mid-game with the early-game. Here we see that Dyrus spends his time distributed throughout the map. Most likely this is because (with a few exceptions such as split pushing) players tend to group during the mid-game around timings that their characters are strong (when they complete a strong item, or reach a certain level to unlock an important ability, etc.). This also allows them to start accruing global gold and advantages from taking objectives around the map as a team.</p>
+    <p>Now change the time range to 15-25 minutes to contrast the mid-game with the early-game. Here we see that Dyrus spends his time distributed throughout the map. This is most likely because players tend to group during the mid-game around timings that their characters are strong (when they complete a strong item, or reach a certain level to unlock an important ability, etc.). This also allows them to start accruing global gold and advantages from taking objectives around the map as a team.</p>
     <br/>
     <p>We should be able to answer a whole bunch of questions just by looking at this map. For example, what time does lane phase usually break down? Do certain players put more emphasis on lane dominance than grouping with their team? Try it out and see what trends you can find!</p>
 
