Bugfix on smoothscroll

--- a/root/index.html
+++ b/root/index.html
@@ -92,7 +92,7 @@
 
 <div id="wrapper">
     <div id="columns">
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/double.jpg" />
                 <h4>Doublelift "Doublelift" (ADC)</h4>
@@ -102,7 +102,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/sneaky.jpg" />
                 <h4>Sneaky "C9 Sneaky" (ADC)</h4>
@@ -112,7 +112,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/bjergsen.jpg" />
                 <h4>Bjersen "mid is sucess" (MID)</h4>
@@ -122,7 +122,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/huni.jpeg" />
                 <h4>Huni "ADC Huni" (TOP)</h4>
@@ -132,7 +132,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/darshan.jpg" />
                 <h4>Darshan "ZionSpartan" (TOP)</h4>
@@ -142,7 +142,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/rush.jpg" />
                 <h4>Rush "Rush" (JUNGLE)</h4>
@@ -152,7 +152,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/wildTurtle.jpg" />
                 <h4>WildTurtle "WildTurtle" (ADC)</h4>
@@ -162,7 +162,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/impact.jpg" />
                 <h4>Impact "Impact" (TOP)</h4>
@@ -172,7 +172,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/piglet.jpg" />
                 <h4>Piglet "GodPiglet" (ADC)</h4>
@@ -182,7 +182,7 @@
             </div>
         </a>
 
-        <a class="smoothScroll">
+        <a class="smoothScroll2">
             <div class="pin">
                 <img src="img/kiwikid.jpg" />
                 <h4>KiWiKiD "KiWiKiD" (SUPPORT)</h4>
